--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
     <section id="home" class="hero">
         <video autoplay muted loop id="heroVideo" playsinline>
-            <source src="https://player.vimeo.com/external/464608281.sd.mp4?s=c550a30043203fb333f2154c7f60374353932c9e&profile_id=165&oauth2_token_id=57447761" type="video/mp4">
+            <source src="https://vimeo.com/1139517331?fl=ip&fe=ec" type="video/mp4">
         </video>
         <div class="hero-overlay"></div>
         <div class="hero-content" data-aos="fade-up" data-aos-duration="1500">
