--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
     <section id="home" class="hero">
         <video autoplay muted loop id="heroVideo" playsinline>
-            <source src="https://vimeo.com/1139517331?fl=ip&fe=ec" type="video/mp4">
+            <source src="https://videos.pexels.com/video-files/2953472/2953472-hd_1920_1080_30fps.mp4" type="video/mp4">
         </video>
         <div class="hero-overlay"></div>
         <div class="hero-content" data-aos="fade-up" data-aos-duration="1500">
