--- a/index.html
+++ b/index.html
@@ -198,10 +198,9 @@
     </nav>
 
     <section id="home" class="hero">
-        <video autoplay muted loop playsinline id="heroVideo" poster="https://images.unsplash.com/photo-1516919549054-e08258825f80?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80">
-            <source src="https://videos.pexels.com/video-files/2953472/2953472-hd_1920_1080_30fps.mp4" type="video/mp4">
-        </video>
-        
+        <video autoplay muted loop id="heroVideo" playsinline>
+    <source src="brownie.mp4" type="video/mp4">
+</video>    
         <div class="hero-overlay"></div>
         
         <div class="hero-content" data-aos="fade-up" data-aos-duration="1500">
